--- a/src/NSwagStudio/Views/CodeGenerators/SwaggerToCSharpControllerGeneratorView.xaml
+++ b/src/NSwagStudio/Views/CodeGenerators/SwaggerToCSharpControllerGeneratorView.xaml
@@ -54,6 +54,9 @@
                             <CheckBox IsChecked="{Binding Command.WrapResponses, Mode=TwoWay}" 
                                       Content="Wrap success responses to allow full response access" Margin="0,0,0,12" />
 
+                            <CheckBox IsChecked="{Binding Command.GenerateAspNetCore, Mode=TwoWay}" 
+                                      Content="Generate for .NET Core" Margin="0,0,0,12" />
+
                             <CheckBox IsChecked="{Binding Command.GenerateOptionalParameters, Mode=TwoWay}" 
                                       Content="Generate optional parameters (reorder parameters (required first, optional at the end) and generate optional parameters)" Margin="0,0,0,12" />
 
